<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/register_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/background_light"
            android:hint="@string/username"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.509" app:layout_constraintTop_toBottomOf="@+id/register_userPic"
            android:layout_marginTop="44dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:gravity="center"
            android:id="@+id/register_password"
            android:background="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_again"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/register_password_again"
            app:layout_constraintTop_toBottomOf="@+id/register_password"
            android:background="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:gravity="center"
            android:id="@+id/register_email"
            app:layout_constraintTop_toBottomOf="@+id/register_username"
            android:background="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_regButton"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/register_password_again"
            app:layout_constraintEnd_toEndOf="@+id/register_password_again"
            app:layout_constraintStart_toStartOf="@+id/register_password_again"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_toLogin"
            app:layout_constraintTop_toBottomOf="@+id/register_regButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"/>
    <ImageView
            android:layout_width="157dp"
            android:layout_height="146dp" app:srcCompat="@android:color/holo_blue_dark"
            android:id="@+id/register_userPic" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/selectPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_selectPic"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintTop_toTopOf="@+id/register_userPic" app:layout_constraintStart_toStartOf="@+id/register_userPic"
            app:layout_constraintEnd_toEndOf="@+id/register_userPic" app:layout_constraintBottom_toBottomOf="@+id/register_userPic"/>
</androidx.constraintlayout.widget.ConstraintLayout>