<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_email" android:layout_marginTop="244dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:background="@android:color/background_light"
            android:hint="@string/username"
            android:gravity="center" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:gravity="center"
            android:id="@+id/login_password"
            android:background="@android:color/background_light"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_loginButton" app:layout_constraintEnd_toEndOf="@+id/login_password"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="@+id/login_password"/>
    <TextView
            android:text="@string/noAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_toRegister" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_loginButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>